ui: prevent content from overflowing the display area (#857)

--- a/packages/ui-default/misc/typography.styl
+++ b/packages/ui-default/misc/typography.styl
@@ -261,6 +261,7 @@ small, figcaption
 
 .typo
   word-wrap()
+  overflow: auto
 
 .typo a, .typo .link, .typo-a
   &, &:visited, &:active, &:hover
